<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="42dp"

    android:background="@drawable/back_button_text">

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/back_button_image"
        android:clickable="true"
        android:contentDescription="@string/content_description"
        android:elevation="4dp"
        android:src="@drawable/ic_star_border_black_36dp"
        android:tint="@color/md_amber_500" />

    <TextView
        android:id="@+id/city_name"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/padding_horizontal"
        android:layout_toLeftOf="@id/star_button"
        android:gravity="center_vertical"
        tools:text="@string/city_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="@drawable/separator" />
</RelativeLayout>