<resources>
    <string name="app_name">MTT Weather</string>
    <string name="title_city_detail">City Weather</string>
    <string name="title_activity_search_city">Search City</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description">Description TODO</string>
...
